--- a/App.config
+++ b/App.config
@@ -1,6 +1,33 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="rtssh.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <rtssh.Properties.Settings>
+            <setting name="Username" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Host" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Port" serializeAs="String">
+                <value>22</value>
+            </setting>
+            <setting name="Key" serializeAs="String">
+                <value>id_rsa</value>
+            </setting>
+            <setting name="autoConnect" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="saveSettings" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </rtssh.Properties.Settings>
+    </userSettings>
 </configuration>
