Add JSON Path TextBox and fix some errors

--- a/App.config
+++ b/App.config
@@ -10,16 +10,16 @@
     </startup>
     <userSettings>
         <rtssh.Properties.Settings>
-            <setting name="Username" serializeAs="String">
+            <setting name="username" serializeAs="String">
                 <value />
             </setting>
-            <setting name="Host" serializeAs="String">
+            <setting name="host" serializeAs="String">
                 <value />
             </setting>
-            <setting name="Port" serializeAs="String">
+            <setting name="port" serializeAs="String">
                 <value>22</value>
             </setting>
-            <setting name="Key" serializeAs="String">
+            <setting name="key" serializeAs="String">
                 <value>id_rsa</value>
             </setting>
             <setting name="autoConnect" serializeAs="String">
@@ -27,6 +27,9 @@
             </setting>
             <setting name="saveSettings" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="jsonPath" serializeAs="String">
+                <value />
             </setting>
         </rtssh.Properties.Settings>
     </userSettings>
