--- a/App.config
+++ b/App.config
@@ -31,6 +31,12 @@
             <setting name="jsonPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="tempText" serializeAs="String">
+                <value>CPU</value>
+            </setting>
+            <setting name="freqText" serializeAs="String">
+                <value>CPU</value>
+            </setting>
         </rtssh.Properties.Settings>
     </userSettings>
 </configuration>
