--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -25,6 +25,12 @@
     <Setting Name="jsonPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="tempText" Type="System.String" Scope="User">
+      <Value Profile="(Default)">CPU</Value>
+    </Setting>
+    <Setting Name="freqText" Type="System.String" Scope="User">
+      <Value Profile="(Default)">CPU</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
 
