Add option between comma or new line seperator

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -31,6 +31,9 @@
     <Setting Name="freqText" Type="System.String" Scope="User">
       <Value Profile="(Default)">CPU</Value>
     </Setting>
+    <Setting Name="separatorComma" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
 
