--- a/App.config
+++ b/App.config
@@ -37,6 +37,9 @@
             <setting name="freqText" serializeAs="String">
                 <value>CPU</value>
             </setting>
+            <setting name="separatorComma" serializeAs="String">
+                <value>True</value>
+            </setting>
         </rtssh.Properties.Settings>
     </userSettings>
 </configuration>
