Add option to toggle temp and freq

--- a/App.config
+++ b/App.config
@@ -40,6 +40,9 @@
             <setting name="separatorComma" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="displayToggle" serializeAs="String">
+                <value>2</value>
+            </setting>
         </rtssh.Properties.Settings>
     </userSettings>
 </configuration>
