--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -34,6 +34,9 @@
     <Setting Name="separatorComma" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="displayToggle" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
 
