Add default host

--- a/App.config
+++ b/App.config
@@ -14,7 +14,7 @@
                 <value />
             </setting>
             <setting name="host" serializeAs="String">
-                <value />
+                <value>192.168.122.1</value>
             </setting>
             <setting name="port" serializeAs="String">
                 <value>22</value>
