--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -8,7 +8,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="host" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">192.168.122.1</Value>
     </Setting>
     <Setting Name="port" Type="System.String" Scope="User">
       <Value Profile="(Default)">22</Value>
