Add refresh interval control and comments

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -37,6 +37,9 @@
     <Setting Name="displayToggle" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">2</Value>
     </Setting>
+    <Setting Name="refreshInterval" Type="System.String" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
 
