--- a/App.config
+++ b/App.config
@@ -1,12 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings"
-                      type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="rtssh.Properties.Settings"
-                     type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-                     allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="rtssh.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup>
@@ -24,7 +20,7 @@
                 <value>22</value>
             </setting>
             <setting name="key" serializeAs="String">
-                <value>id_rsa</value>
+                <value />
             </setting>
             <setting name="autoConnect" serializeAs="String">
                 <value>False</value>
