--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -14,7 +14,7 @@
       <Value Profile="(Default)">22</Value>
     </Setting>
     <Setting Name="key" Type="System.String" Scope="User">
-      <Value Profile="(Default)">id_rsa</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="autoConnect" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
