Add Run at startup option

--- a/App.config
+++ b/App.config
@@ -46,6 +46,9 @@
             <setting name="refreshInterval" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="startup" serializeAs="String">
+                <value>False</value>
+            </setting>
         </rtssh.Properties.Settings>
     </userSettings>
 </configuration>
