--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -40,6 +40,9 @@
     <Setting Name="refreshInterval" Type="System.String" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="startup" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
 
