--- a/App.config
+++ b/App.config
@@ -35,9 +35,9 @@
                 <value>CPU</value>
             </setting>
             <setting name="freqText" serializeAs="String">
-                <value>CPU</value>
+                <value />
             </setting>
-            <setting name="separatorComma" serializeAs="String">
+            <setting name="separatorSpace" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="displayToggle" serializeAs="String">
