--- a/rtssh.csproj
+++ b/rtssh.csproj
@@ -69,6 +69,12 @@
         <Compile Include="RTSSHandler.cs" />
         <Compile Include="SSHStream.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="TreeViewJson.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="TreeViewJson.Designer.cs">
+          <DependentUpon>TreeViewJson.cs</DependentUpon>
+        </Compile>
         <EmbeddedResource Include="MainForm.resx">
           <DependentUpon>MainForm.cs</DependentUpon>
         </EmbeddedResource>
@@ -81,6 +87,9 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
+        <EmbeddedResource Include="TreeViewJson.resx">
+          <DependentUpon>TreeViewJson.cs</DependentUpon>
+        </EmbeddedResource>
         <None Include="packages.config" />
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
