--- a/rtssh.csproj
+++ b/rtssh.csproj
@@ -13,6 +13,9 @@
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
         <Deterministic>true</Deterministic>
     </PropertyGroup>
+    <PropertyGroup>
+        <ApplicationIcon>resources/rtssh.ico</ApplicationIcon>
+    </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>x64</PlatformTarget>
         <DebugSymbols>true</DebugSymbols>
